--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,17 @@
+/* roboto-mono-regular - latin */
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/fonts/roboto-mono-v22-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('/fonts/roboto-mono-v22-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/roboto-mono-v22-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/roboto-mono-v22-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/roboto-mono-v22-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/roboto-mono-v22-latin-regular.svg#RobotoMono') format('svg'); /* Legacy iOS */
+}
+
 html,
 body {
   padding: 0;
